--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: rgb(182, 159, 124);
+    background-color: rgb(82, 40, 21);
 }
 
 .container {
@@ -26,7 +26,8 @@ h1 {
     font-size: 1.8rem;
     text-decoration: underline;
     text-transform: capitalize;
-    text-shadow: 3px 1px rgba(250, 186, 186, 0.664);
+    color: white;
+    text-shadow: 3px 1px rgba(39, 34, 34, 0.664);
 }
 
 
@@ -42,7 +43,7 @@ nav a {
     font-weight: 600;
     font-size: 1.5rem;
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 p {
@@ -52,9 +53,10 @@ p {
 
 .main-header {
     text-align: center;
-    margin: 1em 0;
+    margin: 0.5em 0;
+    padding: 0.4em;
     font-weight: 600;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     background-color: rgb(241, 186, 149);
 
 }
@@ -63,7 +65,7 @@ p {
 .lang-learning-tips > h2 {
     text-transform: uppercase;
     padding: 1em 0;
-    color: rgb(209, 97, 23);
+    color: rgb(158, 54, 5);
 }
 
 .lang-learning-benefits > .article-intro, 
@@ -77,15 +79,42 @@ p {
     text-decoration: none;
     letter-spacing: 0.05em;
     font-size: 1.3rem;
-    color: rgb(209, 97, 23);
+    color: rgb(158, 54, 5);
+    display: inline-block;
+    transition: all 0.5s;
 }
+
+.lang-learning-benefits > a:focus, 
+.lang-learning-benefits > a:hover,
+.lang-learning-tips > a:focus,
+.lang-learning-tips > a:hover{
+    color: rgb(37, 17, 4);
+    transform: scale(0.95);
+}
+
+
 
 .languages-list {
     margin: 2em;
     text-decoration: underline;
-    text-shadow: 3px 1px rgba(250, 186, 186, 0.664);
+    text-shadow: 2px 1px rgba(247, 207, 207, 0.664);
     font-size: 1.3rem;
+}
 
+.more-languages {
+    text-decoration: none;
+    color: black;
+    text-shadow: 2px 1px rgba(247, 207, 207, 0.664);
+    font-size: 1.3rem;
+    display: block;
+    transition: all 0.5s;
+}
+
+.more-languages:hover,
+.more-languages:focus {
+    color: rgb(158, 54, 5);
+    transform: scale(1.3);
+   
 }
 
 
@@ -165,6 +194,50 @@ img {
     color: white;
     text-shadow: 3px 1px rgb(22, 18, 18);
 }
+
+
+/*==================
+    Media queries 
+===================*/
+
+@media (min-width: 600px) {
+    .container {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+    
+    nav a {
+        font-size: 2rem;
+    }
+    
+    p {
+        font-size: 1.8rem;
+    }
+    
+    .main-header {
+        font-size: 2.2rem;
+    }
+
+    .lang-learning-benefits > a, 
+    .lang-learning-tips > a{
+        font-size: 1.6rem; 
+    }
+
+    .languages-list, .more-languages {
+        font-size: 2rem;
+    }
+
+    .main-logo {
+        font-size: 2.5rem;
+    }
+}
+
+
+@media (min-width: 800px)
 
 
 
