--- a/style.css
+++ b/style.css
@@ -44,6 +44,16 @@ nav a {
     font-size: 1.5rem;
     text-decoration: none;
     color: rgb(255, 255, 255);
+    transition: all 0.5s;
+}
+
+nav a:hover, 
+nav a:focus {
+    color: rgb(216, 80, 17);
+}
+
+.current-page {
+    text-decoration: underline;
 }
 
 p {
@@ -234,10 +244,102 @@ img {
     .main-logo {
         font-size: 2.5rem;
     }
+
+
+    /*============
+        Layout 
+    ============*/
+    header {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        grid-template-areas: 
+            "logo logo nav"
+        ;
+    }
+
+    .logo {
+        flex-direction: row-reverse;
+        justify-content: space-evenly;
+        grid-area: logo;
+    }
+
+    .logo > img {
+        max-width: 40%;
+        object-fit: cover;
+    }
+
+    .logo > h1 {
+        text-decoration: none;
+        font-size: 1.5rem;
+        text-shadow: 2px 5px rgb(51, 18, 3);
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+
+    nav a {
+        margin: 0 0.5em;
+        font-size: 1.5rem;
+    }
+
+
+
 }
 
 
-@media (min-width: 800px)
+@media (min-width: 800px) {
+    header {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        grid-template-areas: 
+            "logo logo nav"
+        ;
+    }
+
+    .logo {
+        flex-direction: row-reverse;
+        justify-content: space-evenly;
+        grid-area: logo;
+    }
+
+    .logo > img {
+        max-width: 35%;
+        object-fit: cover;
+    }
+
+    .logo > h1 {
+        text-decoration: none;
+        font-size: 2.1em;
+        text-shadow: 2px 5px rgb(51, 18, 3);
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+
+    nav a {
+        margin: 0 0.5em;
+    }
+    
+
+
+
+
+    .main-container {
+        display: grid;
+        grid-template-columns: repeat(autofit, minmax(300px, 1fr));
+        grid-template-areas: "
+
+        ";
+    }
+}
 
 
 
