--- a/style.css
+++ b/style.css
@@ -292,52 +292,52 @@ img {
 
 
 @media (min-width: 800px) {
-    header {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 1em;
-        grid-template-areas: 
-            "logo logo nav"
-        ;
+
+    .container {
+        max-width: 95%;
+        margin: 0 auto;
     }
 
-    .logo {
-        flex-direction: row-reverse;
-        justify-content: space-evenly;
-        grid-area: logo;
-    }
-
-    .logo > img {
-        max-width: 35%;
-        object-fit: cover;
-    }
 
     .logo > h1 {
-        text-decoration: none;
         font-size: 2.1em;
-        text-shadow: 2px 5px rgb(51, 18, 3);
     }
-
-    nav ul {
-        display: flex;
-        justify-content: space-evenly;
-        margin: 0;
-    }
-
-    nav a {
-        margin: 0 0.5em;
-    }
-    
-
-
-
 
     .main-container {
         display: grid;
-        grid-template-columns: repeat(autofit, minmax(300px, 1fr));
-        grid-template-areas: "
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 1em;
+        grid-template-areas: 
+            "header header header benefits"
+            "description description description benefits"
+            "description description description benefits"
+            "description description description tips"
+            "logo logo logo tips";
+    }
 
-        ";
+    .main-header {
+        grid-area: header;
+        align-self: baseline;
+    }
+
+    .description {
+        grid-area: description;
+    }
+
+    .main-logo {
+        grid-area: logo;
+    }
+
+    .lang-learning-tips {
+        grid-area: tips;
+        height: 10px;
+
+    }
+
+    .lang-learning-benefits {
+        grid-area: benefits;
+        height: 10px;
+
     }
 }
 
