--- a/style.css
+++ b/style.css
@@ -5,13 +5,18 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     background: #EB5757;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #000000, #EB5757);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #cc7f7f, #701111); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: -webkit-linear-gradient(to bottom, #000000, #EB5757);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #cc7f7f, #972626); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: auto;
+    height: 100%;
+    
 
 }
+
 
 header {
     background-color: #000000dc;
@@ -217,6 +222,77 @@ img {
 
 
 /*==================
+    Form 
+===================*/
+
+.form-container {
+    background-color: white;
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 3em;
+    margin-top: 3em;
+    margin-bottom: 5em;
+
+}
+
+.form-container > h2 {
+    text-decoration: underline;
+}
+
+.form-container > p {
+    margin-top: 1em;
+}
+
+.form-info {
+    max-width: 85%;
+    margin: 0 auto;
+}
+
+.prompt{
+    color: white;
+    font-weight: bolder;
+    background-color: rgb(241, 186, 149);
+    max-width: 40%;
+    margin: 0 auto;
+}
+
+.partner-signup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5em;
+}
+
+.partner-signup > input {
+    background-color: rgba(241, 186, 149, 0.116);
+    margin-bottom: 1em;
+    border: 2px solid #000000dc;
+}
+
+.partner-signup > textarea {
+    background-color: rgba(241, 186, 149, 0.116);
+    border: 2px solid #000000dc;
+    max-width: 37.5%;
+}
+
+.form-text {
+    background-color: rgba(241, 186, 149, 0.562);
+    padding: 2em;
+}
+
+.btn {
+    background-color: #000000dc;
+    color: white;
+    font-size: 2rem;
+    padding: 0.25em 0.75em;
+    border-radius: 10px;
+    margin: 1em 0;
+
+}
+
+
+/*==================
     Media queries 
 ===================*/
 
@@ -296,9 +372,9 @@ img {
         font-size: 1.5rem;
     }
 
-
-
 }
+
+
 
 
 @media (min-width: 800px) {
