--- a/style.css
+++ b/style.css
@@ -410,7 +410,6 @@ img {
     .main-logo {
         grid-column: 1 / 3;
         font-size: 4rem;
-        height: 130%;
         margin-top: 0.2em;
     }
 
@@ -460,7 +459,13 @@ img {
 
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 900px) {
+    .main-logo {
+        height: 130%;
+    }
+}
+
+@media (min-width: 1300px) {
     .main-logo {
         max-width: 70%;
         margin: 0 auto;
