--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ img {
     height: 40vh;
     text-align: center;
     font-weight: 300;
-    font-size: 0.5rem;
+    font-size: 3rem;
     margin: 1em 0;
     color: white;
     text-shadow: 3px 2px rgb(0, 0, 0);
@@ -482,6 +482,7 @@ img {
     
     .container {
         max-width: 80%;
+    }
 }
 
 
