--- a/style.css
+++ b/style.css
@@ -474,6 +474,7 @@ img {
         max-width: 70%;
         margin: 0 auto;
         margin-top: 0.8em;
+        font-size: 2.7rem;
     }
 
     .logo > img {
@@ -481,7 +482,7 @@ img {
     }
     
     .container {
-        max-width: 80%;
+        max-width: 85%;
     }
 }
 
